# APIs

./: .gitignore  Makefile  Makefile.am  Makefile.am.bak  api-apis.cabal  apis.cabal  configure.ac  schemafy.js
apis/dropbox/: dropbox.delta.xml  dropbox.files.json  dropbox.files.put.json  dropbox.files.put.xml  dropbox.files.xml  dropbox.media.xml  dropbox.metadata.json  dropbox.metadata.xml  dropbox.restore.xml  dropbox.revisions.xml  dropbox.search.xml  dropbox.shares.xml
apis/facebook/: facebook.graph.achievement.xml  facebook.graph.album.comments.xml  facebook.graph.album.likes.xml  facebook.graph.album.photos.xml  facebook.graph.album.picture.xml  facebook.graph.album.xml  facebook.graph.app.achievements.xml  facebook.graph.app.banned.xml  facebook.graph.app.groups.xml  facebook.graph.app.insights.xml  facebook.graph.app.picture.xml  facebook.graph.app.roles.xml  facebook.graph.app.scores.xml  facebook.graph.app.translations.xml  facebook.graph.app.xml  facebook.graph.checkin.comments.xml  facebook.graph.checkin.likes.xml  facebook.graph.checkin.xml  facebook.graph.comment.comments.xml  facebook.graph.comment.likes.xml  facebook.graph.comment.xml  facebook.graph.domain.xml  facebook.graph.event.attending.xml  facebook.graph.event.declined.xml  facebook.graph.event.feed.xml  facebook.graph.event.maybe.xml  facebook.graph.event.photos.xml  facebook.graph.event.videos.xml  facebook.graph.event.xml  facebook.graph.friendlist.xml  facebook.graph.group.admins.xml  facebook.graph.group.docs.xml  facebook.graph.group.feed.xml  facebook.graph.group.files.xml  facebook.graph.group.members.xml  facebook.graph.group.xml  facebook.graph.link.comments.xml  facebook.graph.link.likes.xml  facebook.graph.link.xml  facebook.graph.message.xml  (+101 more)
apis/krisinformation/: krisinformation.feed.json  krisinformation.feed.xml
apis/smhi/: smhi.pmp.json  smhi.pmp.xml
ffi/: .gitignore  HsFFI.h  Makefile
ffi/c/: bracket.c
ffi/c/lib/: .gitignore  array.h  ghc.h  maybe.h  void.h  yql.h
ffi/cpp/lib/: .gitignore  array.hpp  ghc.hpp  maybe.hpp
ffi/go/: .gitignore  Makefile
ffi/java/: .gitignore  Makefile
ffi/python/: .gitignore  Makefile  test.py
ffi/python/APIs/: setup.py
ffi/python2/: .gitignore  Makefile  apis.py
ffi/python2/APIs/: setup.py
ffi/python3/: .gitignore  Makefile
ffi/python3/APIs/: .gitignore
ffi/ruby/: .gitignore  Makefile  extconf.rb  test.rb
ffi/ruby/apis/: Gemfile  README.md  apis.gemspec
ffi/ruby/apis/lib/: apis.rb
ffi/samples/: Makefile
ffi/samples/cpp/: Makefile  main.cpp
ffi/samples/haskell/: Main.hs  Makefile
ffi/samples/java/: Main.java  Makefile
ffi/samples/python/: main.py
ffi/samples/ruby/: main.rb
ffi/tcl/: .gitignore  Makefile
m4/: .gitignore  ax_jni_include_dir.m4
src/Control/Monad/Trans/: API.hs
src/Data/JSON/: Schema.hs  SchemaNoTH.hs  Void.hs
src/Data/Settings/: YQL.hs  YQLNoTH.hs
src/Data/State/: YQL.hs
src/Data/TH/: API.hs  Convert.hs  FFI.hs  Object.hs  YQL.hs
src/FFI/: .gitignore  Array.hsc  Maybe.hsc  Void.hsc
src/FFI/Data/Settings/: YQL.hsc  YQLNoTH.hsc
src/Helper/: File.hs  Name.hs  YQL.hs
src/TH/: API.hs  APIs.hs  APIsNoTH.hs  FFI.hs  FFIs.hs  FFIsNoTH.hs  HSC.hs  HSCs.hs  SWIG.hs  SWIGs.hs  Schema.hs  YQL.hs  YQLs.hs  YQLsNoTH.hs
src/TH/API/: Input.hs  Output.hs
