name:              api-apis
version:           0.0.0
cabal-version:     >= 1.10
build-type:        Simple

Flag dev
    Description:   Compile without optimizations.
    Default:       False

Flag ffi
    Description:   Compile ffi library.
    Default:       False

Flag hsc
    Description:   Generate .hsc and .h files.
    Default:       False

Flag swig
    Description:   Generate SWIG interface file.
    Default:       False

library
    default-language: Haskell2010

    hs-source-dirs: src/

    exposed-modules: Control.Monad.Trans.API
                     Data.Settings.YQL
                     Data.State.YQL
                     Data.TH.API
                     Data.TH.YQL
                     TH.API
                     TH.APIs
                     TH.API.Input
                     TH.API.Output
                     TH.YQL
                     TH.YQLs

    other-modules: Data.TH.Convert
                   Data.TH.Object
                   Helper.File
                   Helper.Name
                   Helper.YQL

    if flag(hsc)
       exposed-modules: TH.HSC
                        TH.HSCs
      
       ghc-options: -Wall -Werror -O0 -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-matches
    else
       if flag(ffi)
          exposed-modules: Data.TH.FFI
                           FFI.Array
                           FFI.Maybe
                           FFI.Types
                           FFI.Void
                           TH.FFI
                           TH.FFIs
   
          other-modules: FFI.Data.Settings.YQL
   
          ghc-options: -Wall -Werror -O0 -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-matches -dynamic -shared -fPIC -stubdir ffi/c/lib

          include-dirs: ./

          c-sources: ffi/c/bracket.c

          extra-libraries: HSrts-ghc7.8.3
                           HSbase-4.7.0.1-ghc7.8.3
                           HSinteger-gmp-0.5.1.0-ghc7.8.3
                           HSghc-prim-0.3.1.0-ghc7.8.3
       else
          if flag(swig)
             exposed-modules: TH.SWIG
                              TH.SWIGs
      
             ghc-options: -Wall -Werror -O0 -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-matches
          else
             if flag(dev)
                ghc-options: -Wall -Werror -O0 -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-matches
             else
                ghc-options: -Wall -O2 -fno-spec-constr -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-matches

    extensions: 
                                
    build-depends: aeson
                 , api-yql
                 , base
                 , bytestring
                 , containers
                 , deepseq
                 , directory
                 , ecma262
                 , exceptions
                 , filemanip
                 , filepath
                 , hslogger
                 , http-conduit
                 , http-types
                 , hxt
                 , json-schema          == 0.0.0
                 , mtl
                 , opentable
                 , split
                 , strict
                 , template-haskell
                 , text
                 , time
                 , transformers        
                 , unordered-containers
                 , utf8-string
