name:              apis
version:           0.0.1
synopsis:          A Template Haskell library for generating type safe API calls
description:       A library that uses Open Data Tables and JSON Schemas to
                   generate Haskell types and API calls.
homepage:          https://github.com/fabianbergmark/APIs
category:          Web
author:            Fabian Bergmark
maintainer:        fabian.bergmark@gmail.com
license:           BSD2
license-file:      LICENSE
cabal-version:     >= 1.10
build-type:        Simple

extra-source-files: apis/krisinformation/krisinformation.feed.json
                    apis/krisinformation/krisinformation.feed.xml
                    apis/smhi/smhi.pmp.json
                    apis/smhi/smhi.pmp.xml
                    apis/dropbox/dropbox.files.json
                    apis/dropbox/dropbox.files.xml
                    apis/dropbox/dropbox.files.put.json
                    apis/dropbox/dropbox.files.put.xml
                    apis/dropbox/dropbox.metadata.json
                    apis/dropbox/dropbox.metadata.xml
                    apis/facebook/facebook.graph.user.feed.json
                    apis/facebook/facebook.graph.user.feed.xml
                    apis/facebook/facebook.graph.user.feed.post.json
                    apis/facebook/facebook.graph.user.feed.post.xml
                    apis/facebook/facebook.graph.user.friendlists.json
                    apis/facebook/facebook.graph.user.friendlists.xml
                    apis/facebook/facebook.graph.user.friends.json
                    apis/facebook/facebook.graph.user.friends.xml
                    apis/facebook/facebook.graph.user.inbox.json
                    apis/facebook/facebook.graph.user.inbox.xml
                    apis/facebook/facebook.graph.user.links.json
                    apis/facebook/facebook.graph.user.links.xml
                    apis/facebook/facebook.graph.user.photos.json
                    apis/facebook/facebook.graph.user.photos.xml
                    apis/facebook/facebook.graph.user.photosuploaded.json
                    apis/facebook/facebook.graph.user.photosuploaded.xml
                    apis/facebook/facebook.graph.user.pokes.json
                    apis/facebook/facebook.graph.user.pokes.xml
                    apis/facebook/facebook.graph.user.posts.json
                    apis/facebook/facebook.graph.user.posts.xml
                    apis/facebook/facebook.graph.user.statuses.json
                    apis/facebook/facebook.graph.user.statuses.xml
                    apis/facebook/facebook.graph.user.tagged.json
                    apis/facebook/facebook.graph.user.tagged.xml
                    LICENSE

Flag NoTH
  Description: Don't use Template Haskell
  Default:     False

source-repository head
  type:     git
  location: https://github.com/fabianbergmark/APIs.git

library
    default-language: Haskell2010
    hs-source-dirs: src/

    if flag(NoTH)
      exposed-modules: Control.Monad.Trans.API
                       Data.JSON.Void
                       Data.JSON.SchemaNoTH
                       Data.Settings.YQLNoTH
                       Data.State.YQL
                       TH.APIsNoTH
                       TH.YQLsNoTH
    else
      exposed-modules: Control.Monad.Trans.API
                       Data.JSON.Void
                       Data.JSON.Schema
                       Data.JSON.SchemaNoTH
                       Data.Settings.YQL
                       Data.Settings.YQLNoTH
                       Data.State.YQL
                       TH.API
                       TH.API.Input
                       TH.API.Output
                       TH.APIs
                       TH.APIsNoTH
                       TH.YQL
                       TH.YQLs
                       TH.YQLsNoTH

    if flag(NoTH)
      other-modules: Data.TH.Convert
                     Data.TH.Object
    else
      other-modules: Data.TH.API
                     Data.TH.Convert
                     Data.TH.FFI
                     Data.TH.Object
                     Data.TH.YQL
                     Helper.File
                     Helper.Name
                     Helper.YQL

    ghc-options: -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-matches

    if flag(NoTH)           
      build-depends: aeson                == 0.*
                   , yql                  == 0.*
                   , base                 == 4.*
                   , containers           == 0.*
                   , directory            == 1.*
                   , ecma262              == 0.*
                   , exceptions           == 0.*
                   , hslogger             == 1.*
                   , mtl                  == 2.*
                   , opendatatable        == 0.*
                   , text                 == 1.*
                   , time                 == 1.*
                   , transformers         == 0.*
                   , unordered-containers == 0.*       
                   , utf8-string          == 0.*
    else
      build-depends: aeson                == 0.*
                   , yql                  == 0.*
                   , base                 == 4.*
                   , containers           == 0.*
                   , deepseq              == 1.*
                   , directory            == 1.*
                   , ecma262              == 0.*
                   , exceptions           == 0.*
                   , filemanip            == 0.*
                   , filepath             == 1.*
                   , hslogger             == 1.*
                   , hxt                  == 9.*
                   , mtl                  == 2.*
                   , opendatatable        == 0.*
                   , split                == 0.*
                   , template-haskell     == 2.*
                   , text                 == 1.*
                   , th-lift              == 0.*
                   , time                 == 1.*
                   , transformers         == 0.*
                   , unordered-containers == 0.*       
                   , utf8-string          == 0.*